--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "@studio-freight/lenis": "^1.0.42",
     "framer-motion": "^12.23.24",
     "lenis": "^1.3.15",
+    "lottie-react": "^2.4.1",
     "lucide-react": "^0.553.0",
     "next": "16.0.3",
     "react": "19.2.0",
-    "react-dom": "19.2.0"
+    "react-dom": "19.2.0",
+    "react-lottie": "^1.2.10"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
