--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "next": "16.0.3",
     "react": "19.2.0",
     "react-dom": "19.2.0",
-    "react-lottie": "^1.2.10"
+    "react-lottie": "^1.2.10",
+    "swiper": "^12.0.3"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
