--- a/package.json
+++ b/package.json
@@ -9,21 +9,27 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@react-google-maps/api": "^2.20.7",
     "@studio-freight/lenis": "^1.0.42",
     "chart.js": "^4.5.1",
     "framer-motion": "^12.23.24",
+    "leaflet": "^1.9.4",
     "lenis": "^1.3.15",
     "lottie-react": "^2.4.1",
     "lucide-react": "^0.553.0",
+    "maplibre-gl": "^5.13.0",
     "next": "16.0.3",
     "react": "19.2.0",
     "react-chartjs-2": "^5.3.1",
     "react-dom": "19.2.0",
+    "react-leaflet": "^5.0.0",
     "react-lottie": "^1.2.10",
+    "react-map-gl": "^8.1.0",
     "swiper": "^12.0.3"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
+    "@types/leaflet": "^1.9.21",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
